fix flash style

--- a/config/locales/navigations.ja.yml
+++ b/config/locales/navigations.ja.yml
@@ -1,5 +1,8 @@
 ja:
   navs:
-    sign_ups:
+    sign_up:
       succeeded: Welcome to Lamiate!
+      failed: もう一度お試しください
+    sign_in:
+      succeeded: ログインしました
       failed: もう一度お試しください
