Feature/sign out (#36)
* sign out

* fix i18n key

* refactor

* extract controller concerns

* refactor

* to system spec

* install webpacker + stimulus

* not use

* improve flash

--- a/config/locales/navigations.ja.yml
+++ b/config/locales/navigations.ja.yml
@@ -1,6 +1,6 @@
 ja:
   navs:
-    sign_in:
-      succeeded: ログインしました
-      failed: もう一度お試しください
-      already_signed_in: ログインしています
+    signed_in: ログインしました
+    already_signed_in: ログインしています
+    signed_out: ログアウトしました
+    require_user: ログインしてください
