--- a/config/locales/views.ja.yml
+++ b/config/locales/views.ja.yml
@@ -1,6 +1,9 @@
 ja:
+
   projects:
     index:
       title: あなたが参加しているプロジェクト
       empty: まだプロジェクトはありません
       add: プロジェクトを作成する
+    new:
+      submit: 作成する
