--- a/config/locales/navigations.ja.yml
+++ b/config/locales/navigations.ja.yml
@@ -4,6 +4,6 @@ ja:
     signed_in: ログインしました
     already_signed_in: ログインしています
     signed_out: ログアウトしました
-    require_user: ログインしてください
+    ensure_signed_in: ログインしてください
 
     cancel: キャンセル
